--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<?php
+ob_start( 'ob_gzhandler' );
+?>
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
@@ -27,13 +30,15 @@
     </head>
 	<body>
 		<!-- Principal conteneur -->
-		<main class="container-fluid">
+		<main>
 			<!-- bloc-0 -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="assets/img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+							<a class="navbar-brand" href="index.html">
+								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence" role="link" class="tab_focus1" tabindex="0"/>
+							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span>
@@ -44,10 +49,10 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav align">
 								<li>
-									<a href="index.html">Accueil</a>
+									<a href="index.html" class="tab_focus1">Accueil</a>
 								</li>
 								<li>
-									<a href="html-pages/page2.html">page2 &gt;</a>
+									<a href="html-pages/page2.html" class="tab_focus1">page2 &gt;</a>
 								</li>
 							</ul>
 						</div>
@@ -57,14 +62,14 @@
 			<!-- bloc-0 END -->
 
 			<!-- bloc-1-presentation -->
-			<section class="container-fluid bloc-lg bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
-					<div class="row tight-width-whitespace">
+			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+					<div class="container bloc-lg row tight-width-whitespace">
 						<div class="col-sm-12 text-center">
-							<img src="assets/img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+							<img src="assets/img/logo.png" class="center-block image-resize-mode" alt="Logo La chouette agence"/>
 							<h1 class="hero-bloc-text tc-white ">
 								La chouette agence.
 							</h1>
-							<a href="html-pages/page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+							<a href="html-pages/page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine tab_focus2" id="cta-hero" role="link">Contact</a>
 						</div>
 					</div>
 			</section>
@@ -73,9 +78,10 @@
 			<!-- bloc-2-services -->
 			<section class="container bloc-md bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="row">
-					<p class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="assets/img/title.png" />
-					</p>
+					<h3 class="col-sm-12 text-center" id="title_bloc2">
+						La chouette agence est une agence de web design qui aide<br/>
+						les entreprises à devenir attractives et visibles sur Internet.
+					</h3>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4 text-center">
@@ -84,7 +90,8 @@
 							Web design
 						</h3>
 						<p>
-							Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+							Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro,
+							laissez-nous vous réaliser un design dont vous serez fier.
 						</p>
 					</div>
 					<div class="col-sm-4 text-center">
@@ -93,7 +100,8 @@
 							&nbsp;Stratégie
 						</h3>
 						<p>
-							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
+							vos objectifs commerciaux afin de vous proposer le meilleur design possible.
 						</p>
 					</div>
 					<div class="col-sm-4 text-center">
@@ -102,14 +110,19 @@
 							Illustrations
 						</h3>
 						<p>
-							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes
+							talentueux pour donner à vos pages une touche finale d'élégance.
 						</p>
 					</div>
 				</div>
 				<footer class="row voffset-lg voffset">
-					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="assets/img/citation.png" />
-					</div>
+					<blockquote class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+						<p>"La chouette agence est une excellente agence ! Les<br/>
+						web designers ont réussi à capturer l'essence de notre<br/>
+						entreprise et à l'intégrer à notre site. Cela nous a aidé à<br/>
+						doubler nos ventes en ligne à Lyon."</p>
+						<footer>Maxime Guibard, PDG de &#192; vos fourchettes</footer>
+					</blockquote>
 				</footer>
 			</section>
 			<!-- bloc-2-services END -->
@@ -118,12 +131,19 @@
 			<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
-						<h2 class="mg-md text-center tc-white col-sm-12">
-							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-						</h2>
-						<p class="text-center white col-sm-12">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="html-pages/page2.html">Contactez notre équipe</a><br>
+						<h3 class="mg-md text-center tc-white col-sm-12" id="title_bloc3">
+							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
+							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .
+						</h3>
+						<p class="text-center white col-sm-12" id="button_bloc3">
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient
+							besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin
+							d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter.
+							Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement
+							trouvable sur les moteurs de recherche.<br/>
+							<a class="ltc-white bold-link tab_focus2" href="html-pages/page2.html">Contactez notre équipe</a>
 						</p>
+
 					</div>
 				</div>
 			</section>
@@ -134,12 +154,15 @@
 				<div class="container bloc-lg">
 					<header class="row">
 						<h3 class="col-sm-12 text-center">
-							<img alt="agence web, agence web paris, web design paris, stratégie web" src="assets/img/title2.png" />
+							Nous travaillons avec beaucoup de clients,<br/>
+							voici nos réalisations.
 						</h3>
 					</header>
 					<section class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6 text-center">
-							<a href="#" data-lightbox="assets/img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="assets/img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="assets/img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+								<img src="assets/img/1.jpg" alt="Site web journal" class="img-responsive portfolio-thumb" />
+							</a>
 							<h3 class="mg-md">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -148,7 +171,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6 text-center">
-							<a href="#" data-lightbox="assets/img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="assets/img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+							<a href="#" data-lightbox="assets/img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+								<img src="assets/img/2.jpg" class="img-responsive portfolio-thumb" alt="Site web pour photographes" />
+							</a>
 							<h3 class="mg-md">
 								Création d'un site web pour photographes
 							</h3>
@@ -159,7 +184,9 @@
 					</section>
 					<section class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6 text-center">
-							<a href="#" data-lightbox="assets/img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="assets/img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+							<a href="#" data-lightbox="assets/img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+								<img src="assets/img/3.png" class="img-responsive portfolio-thumb" alt="Site web pour voyageur"/>
+							</a>
 							<h3 class="mg-md">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -168,7 +195,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6 text-center">
-							<a href="#" data-lightbox="assets/img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="assets/img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+							<a href="#" data-lightbox="assets/img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+								<img src="assets/img/4.jpg" class="img-responsive portfolio-thumb" alt="Site agence de mariage" />
+							</a>
 							<h3 class="mg-md">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -185,11 +214,11 @@
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 				<div class="container bloc-lg">
 					<div class="row text-center">
-						<h2 class="mg-md tc-white">
-							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+						<h2 class="mg-md tc-white" id="title_bloc5">
+							<span>Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</span>
 						</h2>
 						<div class="col-sm-12">
-							<a href="html-pages/page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							<a href="html-pages/page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero tab_focus2">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -197,10 +226,10 @@
 			<!-- bloc-5-cta END -->
 
 			<!-- Footer - bloc-8 -->
-			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+			<footer class="bloc bgc-atomic-tangerine" id="bloc-8">
 				<div class="container bloc-sm">
 					<div class="row col-sm-12">
-						<p class="text-center white">
+						<p class="text-center">
 							La chouette agence - Agence web basée à Lyon.
 						</p>
 						<div class="row row-no-gutters social">
@@ -222,38 +251,28 @@
 						<div class="row col-sm-4">
 							Partenaires
 							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								<li>Partenaire1</li>
+								<li>Partenaire2</li>
+								<li>Partenaire3</li>
+								<li>Partenaire4</li>
 							</ul>
 						</div>
-						<div class="col-sm-4">
-							Annuaires liste 1
+						<div class="row col-sm-4">
+							Liens Externes
 							<ul>
-								<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-								<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-								<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-								<li><a href="123seoture.com">123seo.com</a></li>
-								<li><a href="123site.com">123site.com</a></li>
-								<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-								<li><a href="listeagence.com">listeagence.com</a></li>
-								<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-								<li><a href="listeseo.com">listeseo.com</a></li>
+								<li>Lien en lien avec le web design1</li>
+								<li>Lien en lien avec le web design2</li>
+								<li>Lien en lien avec le web design3</li>
+								<li>Lien en lien avec le web design4</li>
 							</ul>
 						</div>
-						<div class="col-sm-4">
-							Annuaires liste 2
+						<div class="row col-sm-4">
+							Liens Externes 2
 							<ul>
-								<li><a href="betterseo.com">betterseo.com</a></li>
-								<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-								<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-								<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-								<li><a href="liensagogo.com">liensagogo.com</a></li>
-								<li><a href="backlink.com">backlink.com</a></li>
-								<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-								<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-								<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+								<li>Lien en lien avec le web1</li>
+								<li>Lien en lien avec le web2</li>
+								<li>Lien en lien avec le web3</li>
+								<li>Lien en lien avec le web4</li>
 							</ul>
 						</div>
 					</div>
