--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ ob_start( 'ob_gzhandler' );
 		<meta charset="utf-8">
 		<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet - Accueil">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+		<meta name="theme-color" content="#000">
+		<link rel="apple-touch-icon" href="assets/img/favicon.jpg">
 		<link rel="shortcut icon" type="image/png" href="assets/img/favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -37,7 +39,7 @@ ob_start( 'ob_gzhandler' );
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html">
-								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence" role="link" class="tab_focus1" tabindex="0"/>
+								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Accueil" role="link" class="tab_focus1" tabindex="0"/>
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span>
@@ -52,7 +54,7 @@ ob_start( 'ob_gzhandler' );
 									<a href="index.html" class="tab_focus1">Accueil</a>
 								</li>
 								<li>
-									<a href="html-pages/page2.html" class="tab_focus1">page2 &gt;</a>
+									<a href="html-pages/page2.html" class="tab_focus1">Contacts</a>
 								</li>
 							</ul>
 						</div>
@@ -184,7 +186,7 @@ ob_start( 'ob_gzhandler' );
 					</section>
 					<section class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6 text-center">
-							<a href="#" data-lightbox="assets/img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+							<a href="#" data-lightbox="assets/img/3.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
 								<img src="assets/img/3.png" class="img-responsive portfolio-thumb" alt="Site web pour voyageur"/>
 							</a>
 							<h3 class="mg-md">
