--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!doctype html>
-<?php
-ob_start( 'ob_gzhandler' );
-?>
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet - Accueil">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<meta name="theme-color" content="#000">
+		<meta name="robots" content="index, follow">
 		<link rel="apple-touch-icon" href="assets/img/favicon.jpg">
 		<link rel="shortcut icon" type="image/png" href="assets/img/favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/et-line.css">
-		<script src="assets/js/jquery-2.1.0.js"></script>
-		<script src="assets/js/bootstrap.js"></script>
-		<script src="assets/js/blocs.js"></script>
-		<script src="assets/js/jquery.touchSwipe.js" defer></script>
-		<script src="assets/js/gmaps.js"></script>
+		<script async src="assets/js/jquery-2.1.0.js"></script>
+		<script async src="assets/js/bootstrap.js"></script>
+		<script async src="assets/js/blocs.js"></script>
+		<script async src="assets/js/jquery.touchSwipe.js" defer></script>
+		<script async src="assets/js/gmaps.js"></script>
 		<title>La Chouette Agence - Web Design à Lyon</title>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164136332-1"></script>
@@ -38,8 +36,8 @@ ob_start( 'ob_gzhandler' );
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html">
-								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Accueil" role="link" class="tab_focus1" tabindex="0"/>
+							<a class="navbar-brand" href="index.html" tabindex="0">
+								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Accueil" role="link" class="tab_focus1"/>
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span>
@@ -71,7 +69,7 @@ ob_start( 'ob_gzhandler' );
 							<h1 class="hero-bloc-text tc-white ">
 								La chouette agence.
 							</h1>
-							<a href="html-pages/page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine tab_focus2" id="cta-hero" role="link">Contact</a>
+							<a href="html-pages/page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine tab_focus2" id="cta-hero">Contact</a>
 						</div>
 					</div>
 			</section>
@@ -123,7 +121,7 @@ ob_start( 'ob_gzhandler' );
 						web designers ont réussi à capturer l'essence de notre<br/>
 						entreprise et à l'intégrer à notre site. Cela nous a aidé à<br/>
 						doubler nos ventes en ligne à Lyon."</p>
-						<footer>Maxime Guibard, PDG de &#192; vos fourchettes</footer>
+						<p>Maxime Guibard, PDG de &#192; vos fourchettes</p>
 					</blockquote>
 				</footer>
 			</section>
@@ -237,16 +235,16 @@ ob_start( 'ob_gzhandler' );
 						<div class="row row-no-gutters social">
 							<ul>
 								<li class="text-center col-sm-3">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="index.html" aria-label="Lien pour Twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</li>
 								<li class="col-sm-3 text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="index.html" aria-label="Lien pour Facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</li>
 								<li class="col-sm-3 text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="index.html" aria-label="Lien pour Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 								</li>
 								<li class="col-sm-3 text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="index.html" aria-label="Lien pour Instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</li>
 							</ul>
 						</div>
