--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/et-line.css">
-		<script async src="assets/js/jquery-2.1.0.js"></script>
-		<script async src="assets/js/bootstrap.js"></script>
-		<script async src="assets/js/blocs.js"></script>
-		<script async src="assets/js/jquery.touchSwipe.js" defer></script>
-		<script async src="assets/js/gmaps.js"></script>
+		<script src="assets/js/jquery-2.1.0.js"></script>
+		<script src="assets/js/bootstrap.js"></script>
+		<script src="assets/js/blocs.js"></script>
+		<script src="assets/js/jquery.touchSwipe.js" defer></script>
+		<script src="assets/js/gmaps.js"></script>
+		<script src="assets/js/formHandler.js"></script>
 		<title>La Chouette Agence - Web Design à Lyon</title>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164136332-1"></script>
