--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 			<!-- Contacts END -->
 
 			<!-- ScrollToTop Button -->
-			<a aria-label="Haut de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+			<a aria-label="Haut de la page" tabindex="0" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
 				<span class="fa fa-chevron-up"></span>
 			</a>
 			<!-- ScrollToTop Button END-->
