--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<!-- Header - Nav -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0" role="banner">
 				<div class="container bloc-sm">
-					<nav class="navbar row">
+					<nav role="navigation" class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand logo_header" aria-label="Retour page d'accueil" href="index.html" tabindex="0">
 								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Accueil" aria-label="Accueil"/>
@@ -220,7 +220,7 @@
 			<!-- ScrollToTop Button END-->
 
 			<!-- Footer - Links -->
-			<footer role="doc-footnote" class="bloc bgc-atomic-tangerine" id="footer_links">
+			<footer role="doc-footnote" class="bloc bgc-atomic-tangerine footer_links">
 				<div class="container bloc-sm">
 					<div class="row col-sm-12">
 						<h4 class="text-center">
