--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<!-- Principal container -->
-		<main class="page-container" role="main">
+		<main class="page-container">
 			<!-- Header - Nav -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
@@ -71,7 +71,7 @@
 			<section role="document" class="bloc bgc-white l-bloc" id="contacts">
 				<div class="container bloc-lg">
 					<div class="col-sm-6  row">
-						<form id="form_1" method="post" role="form" novalidate>
+						<form id="form_1" method="post" novalidate>
 							<div class="form-group">
 								<label for="name">
 									Nom
@@ -118,20 +118,18 @@
 			</section>
 			<!-- bloc-7 END -->
 			<!-- ScrollToTop Button -->
-			<button role="button">
-				<a aria-label="Haut de la page" class="bloc-button btn btn-d scrollToTop" id="chevron" tabindex="0" onclick="scrollToTarget('1')">
-					<span class="fa fa-chevron-up"></span>
-				</a>
-			</button>
+			<a aria-label="Haut de la page" class="bloc-button btn btn-d scrollToTop" id="chevron" tabindex="0" onclick="scrollToTarget('1')">
+				<span class="fa fa-chevron-up"></span>
+			</a>
 			<!-- ScrollToTop Button END-->
 			<!-- Footer - Links -->
 			<footer class="bloc bgc-atomic-tangerine footer_links">
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<h4 class="text-center">
-								La chouette agence - Agence web basée à Lyon.<br>
-							</h4>
+							<h3 class="text-center">
+								La chouette agence - Agence web basée à Lyon.
+							</h3>
 							<ul class="row row-no-gutters social">
 								<li class="text-center col-sm-3">
 									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Twitter !"><span class="fa fa-twitter icon-md"></span></a>
@@ -153,19 +151,19 @@
 			<!-- Footer - Links END -->
 		</main>
 		<!-- Principal container END -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164136332-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-164136332-1');
+		</script>
+		<!-- Analytics END -->
+		<script src="../assets/js/jquery-2.1.0.js" defer></script>
+		<script src="../assets/js/bootstrap.js" defer></script>
+		<script src="../assets/js/blocs.js" defer></script>
+		<script src="../assets/js/jqBootstrapValidation.js" defer></script>
+		<script src="../assets/js/formHandler.js" defer></script>
 	</body>
 	<!-- Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164136332-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'UA-164136332-1');
-	</script>
-	<!-- Analytics END -->
-	<script src="../assets/js/jquery-2.1.0.js" defer></script>
-	<script src="../assets/js/bootstrap.js" defer></script>
-	<script src="../assets/js/blocs.js" defer></script>
-	<script src="../assets/js/jqBootstrapValidation.js" defer></script>
-	<script src="../assets/js/formHandler.js" defer></script>
 </html>
