Modif parametres accessibilite

--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -101,8 +101,8 @@
 							</button>
 						</form>
 					</div>
-					<div class="row col-sm-6 text-center">
-						<h2>Contacts</h2>
+					<div class="row col-sm-6 text-center" id="address_info">
+						<h2><span>Contacts</span></h2>
 						<address>
 							<p><span>Adresse email</span><br/>
 							contact@lachouetteagence.com</p>
@@ -118,12 +118,12 @@
 			</section>
 			<!-- bloc-7 END -->
 			<!-- ScrollToTop Button -->
-			<a aria-label="Haut de la page" class="bloc-button btn btn-d scrollToTop" id="chevron" tabindex="0" onclick="scrollToTarget('1')">
+			<a href="#" aria-label="Haut de la page" class="bloc-button btn btn-d scrollToTop chevron" tabindex="0" onclick="scrollToTarget('1')">
 				<span class="fa fa-chevron-up"></span>
 			</a>
 			<!-- ScrollToTop Button END-->
 			<!-- Footer - Links -->
-			<footer class="bloc bgc-atomic-tangerine footer_links">
+			<footer class="bloc bgc-atomic-tangerine footer_links2">
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
