--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	</head>
 	<body>
 		<!-- Principal container -->
-		<main role="main">
+		<main>
 			<!-- Header - Nav -->
-			<header class="bloc bgc-white l-bloc " id="bloc-0" role="banner">
+			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
 					<nav role="navigation" class="navbar row">
 						<div class="navbar-header">
@@ -50,14 +50,13 @@
 			<!-- Header - Nav END -->
 
 			<!-- Presentations -->
-			<section role="doc-introduction" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="presentations">
+			<section role="doc-introduction" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture b-parallax" id="presentations">
 					<div class="container bloc-lg row tight-width-whitespace">
 						<div class="col-sm-12 text-center">
-							<img src="assets/img/logo.png" class="center-block image-resize-mode" alt="Logo La chouette agence"/>
+							<img src="assets/img/logo.png" class="center-block image-resize-mode" alt="Logo La chouette agence" id="logo_presentations"/>
 							<h1 class="hero-bloc-text tc-white ">
-								La chouette agence.
+								<span>La chouette agence.</span>
 							</h1>
-							<a href="html-pages/contacts.html" aria-label="Accès page Contact La Chouette Agence" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine tab_focus2" id="cta-hero">Contact</a>
 						</div>
 					</div>
 			</section>
@@ -116,22 +115,20 @@
 			<!-- Services END -->
 
 			<!-- Motivations -->
-			<section role="doc-part" class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="motivations">
+			<section role="doc-part" class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture b-parallax" id="motivations">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
-						<h2 class="mg-md text-center tc-white col-sm-12" id="title_bloc3">
+						<h2 class="mg-md text-center col-sm-12" id="title_bloc3">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .
 						</h2>
-						<p class="text-center white col-sm-12" id="button_bloc3">
+						<p class="text-center col-sm-12" id="button_bloc3">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient
 							besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin
 							d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter.
 							Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement
-							trouvable sur les moteurs de recherche.<br/>
-							<a class="ltc-white bold-link tab_focus2" href="html-pages/contacts.html" aria-label="Accès page Contacts">Contactez notre équipe</a>
+							trouvable sur les moteurs de recherche.
 						</p>
-
 					</div>
 				</div>
 			</section>
@@ -199,11 +196,11 @@
 			<!-- Realisations END -->
 
 			<!-- Contacts -->
-			<section role="doc-part" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="contacts">
+			<section role="doc-part" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture" id="contacts">
 				<div class="container bloc-lg">
-					<div class="row text-center">
-						<h2 class="mg-md tc-white" id="title_bloc5">
-							<span>Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</span>
+					<div class="row text-center" id="title_bloc5">
+						<h2 class="mg-md tc-white">
+							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12">
 							<a href="html-pages/contacts.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero tab_focus2" aria-label="Accès page Contact La Chouette Agence">Contact</a>
@@ -214,7 +211,7 @@
 			<!-- Contacts END -->
 
 			<!-- ScrollToTop Button -->
-			<a aria-label="Haut de la page" tabindex="0" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+			<a href="#" aria-label="Haut de la page" tabindex="0" class="bloc-button btn btn-d scrollToTop chevron" onclick="scrollToTarget('1')">
 				<span class="fa fa-chevron-up"></span>
 			</a>
 			<!-- ScrollToTop Button END-->
@@ -223,9 +220,9 @@
 			<footer role="doc-footnote" class="bloc bgc-atomic-tangerine footer_links">
 				<div class="container bloc-sm">
 					<div class="row col-sm-12">
-						<h4 class="text-center">
+						<h3 class="text-center">
 							La chouette agence - Agence web basée à Lyon.
-						</h4>
+						</h3>
 						<div class="row row-no-gutters social">
 							<ul id="network">
 								<li class="text-center col-sm-3">
