--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -20,7 +20,7 @@
 		<!-- Principal container -->
 		<main class="page-container">
 			<!-- Header - Nav -->
-			<header class="bloc bgc-white l-bloc " id="bloc-0">
+			<header class="bloc bgc-white l-bloc navigation_block" id="header_nav_contacts">
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
