--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Principal container -->
 		<main>
 			<!-- Header - Nav -->
-			<header class="bloc bgc-white l-bloc " id="bloc-0">
+			<header class="bloc bgc-white l-bloc navigation_block">
 				<div class="container bloc-sm">
 					<nav role="navigation" class="navbar row">
 						<div class="navbar-header">
@@ -49,18 +49,18 @@
 			</header>
 			<!-- Header - Nav END -->
 
-			<!-- Presentations -->
-			<section role="doc-introduction" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture b-parallax" id="presentations">
+			<!-- Banner -->
+			<section role="banner" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture b-parallax" id="banner_block">
 					<div class="container bloc-lg row tight-width-whitespace">
 						<div class="col-sm-12 text-center">
-							<img src="assets/img/logo.png" class="center-block image-resize-mode" alt="Logo La chouette agence" id="logo_presentations"/>
+							<img src="assets/img/logo.png" class="center-block image-resize-mode" alt="Logo La chouette agence" id="logo_banner"/>
 							<h1 class="hero-bloc-text tc-white ">
 								<span>La chouette agence.</span>
 							</h1>
 						</div>
 					</div>
 			</section>
-			<!-- Presentations END -->
+			<!-- Banner END -->
 
 			<!-- Services -->
 			<section role="doc-part" class="container bloc-md bloc bgc-white l-bloc" id="services">
@@ -220,9 +220,9 @@
 			<footer role="doc-footnote" class="bloc bgc-atomic-tangerine footer_links">
 				<div class="container bloc-sm">
 					<div class="row col-sm-12">
-						<h3 class="text-center">
+						<h2 class="text-center" id="footer_enterprise_identity">
 							La chouette agence - Agence web basée à Lyon.
-						</h3>
+						</h2>
 						<div class="row row-no-gutters social">
 							<ul id="network">
 								<li class="text-center col-sm-3">
@@ -240,7 +240,7 @@
 							</ul>
 						</div>
 						<div class="col-sm-4 col-lg-4">
-							<h5>Partenaires</h5>
+							<h3>Partenaires</h3>
 							<ul>
 								<li><a href="https://www.lyon.fr/" aria-label="Partenaire Ville de Lyon">Ville de Lyon</a></li>
 								<li><a href="https://www.auvergnerhonealpes.fr/" aria-label="Partenaire Région Rhône-Alpes">Région Rhône-Alpes</a></li>
@@ -249,7 +249,7 @@
 							</ul>
 						</div>
 						<div class="col-sm-4 col-lg-4">
-							<h5>Le Web design</h5>
+							<h3>Le Web design</h3>
 							<ul>
 								<li><a href="https://www.webdesign-inspiration.com/fr/" aria-label="Site externe Web Design Inspiration">Web Design Inspiration</a></li>
 								<li><a href="https://portfolio.lotincorp.biz/cest-quoi-le-design-web/" aria-label="Site externe Portfolio - C'est quoi le web design?">C'est quoi le Web Design ?</a></li>
@@ -258,7 +258,7 @@
 							</ul>
 						</div>
 						<div class="col-sm-4 col-lg-4">
-							<h5>Les entreprises et le Web</h5>
+							<h3>Les entreprises et le Web</h3>
 							<ul>
 								<li><a href="https://www.ovh.com/fr/web/" aria-label="Site externe OVH - Démarrez votre Projet Web">Démarrez votre projet Web</a></li>
 								<li><a href="https://www.e-monsite.com/pages/aides-creation-site/pourquoi-creer-site.html" aria-label="Site Externe E-monsite - Pourquoi créer un site web ?">Pourquoi créer un site web ?</a></li>
