Modif parametres accessibilite 3

--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -71,7 +71,7 @@
 			<section role="document" class="bloc bgc-white l-bloc" id="contacts">
 				<div class="container bloc-lg">
 					<div class="col-sm-6  row">
-						<form id="form_1" method="post" novalidate>
+						<form id="form_1" method="POST" novalidate action="../includes/form_1.php">
 							<div class="form-group">
 								<label for="name">
 									Nom
@@ -151,6 +151,7 @@
 			<!-- Footer - Links END -->
 		</main>
 		<!-- Principal container END -->
+		<!-- Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164136332-1"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -159,11 +160,10 @@
 			gtag('config', 'UA-164136332-1');
 		</script>
 		<!-- Analytics END -->
+		<script src="../assets/js/gmaps.js" defer></script>
 		<script src="../assets/js/jquery-2.1.0.js" defer></script>
-		<script src="../assets/js/bootstrap.js" defer></script>
 		<script src="../assets/js/blocs.js" defer></script>
-		<script src="../assets/js/jqBootstrapValidation.js" defer></script>
-		<script src="../assets/js/formHandler.js" defer></script>
+		<script src="../assets/js/jquery.touchSwipe.js" defer></script>
+		<script src="../assets/js/bootstrap.js" defer></script>
 	</body>
-	<!-- Analytics -->
 </html>
