--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 							<ul>
 								<li><a href="https://www.ovh.com/fr/web/" aria-label="Site externe OVH - Démarrez votre Projet Web">Démarrez votre projet Web</a></li>
 								<li><a href="https://www.e-monsite.com/pages/aides-creation-site/pourquoi-creer-site.html" aria-label="Site Externe E-monsite - Pourquoi créer un site web ?">Pourquoi créer un site web ?</a></li>
-								<li><a href="https://www.creerentreprise.fr/importance-site-internet-pour-une-entreprise/" aria-label="Site Externe Creerentreprise - Importance d'un site web pour une entreprise">L'importance de créer un site web pour une entreprise</a></li>
+								<li><a href="https://www.creerentreprise.fr/importance-site-internet-pour-une-entreprise/" aria-label="Site Externe Creerentreprise - Importance d'un site web pour une entreprise">L'importance de créer un site web</a></li>
 								<li><a href="https://www.webmarketing-conseil.fr/attirer-clients/" aria-label="Site Externe Webmarketing-conseil - Comment attirer des clients ?">Comment attirer des clients ?</a></li>
 							</ul>
 						</div>
@@ -281,11 +281,10 @@
 			gtag('config', 'UA-164136332-1');
 		</script>
 		<!-- Analytics END -->
+		<script src="assets/js/gmaps.js" defer></script>
 		<script src="assets/js/jquery-2.1.0.js" defer></script>
-		<script src="assets/js/bootstrap.js" defer></script>
 		<script src="assets/js/blocs.js" defer></script>
 		<script src="assets/js/jquery.touchSwipe.js" defer></script>
-		<script src="assets/js/gmaps.js" defer></script>
-		<script src="assets/js/formHandler.js" defer></script>
+		<script src="assets/js/bootstrap.js" defer></script>
 	</body>
 </html>
