Modif parametres accessibilite 4

--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -160,10 +160,10 @@
 			gtag('config', 'UA-164136332-1');
 		</script>
 		<!-- Analytics END -->
-		<script src="../assets/js/gmaps.js" defer></script>
 		<script src="../assets/js/jquery-2.1.0.js" defer></script>
-		<script src="../assets/js/blocs.js" defer></script>
-		<script src="../assets/js/jquery.touchSwipe.js" defer></script>
 		<script src="../assets/js/bootstrap.js" defer></script>
+		<script src="../assets/js/blocs.js" defer></script>
+		<script src="../assets/js/jqBootstrapValidation.js" defer></script>
+		<script src="../assets/js/formHandler.js" defer></script>
 	</body>
 </html>
