Modif accessibilité + Refonte CSS

--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -31,12 +31,12 @@
 		<!-- Principal container -->
 		<main class="page-container">
 			<!-- Header - Nav -->
-			<header class="bloc bgc-white l-bloc navigation_block" id="header_nav_contacts">
-				<div class="container bloc-sm">
+			<header class="bloc container bgc-white l-bloc navigation_block" id="header_nav_contacts">
+				<div class="bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand logo_header" aria-label="Retour page accueil" href="../index.html" tabindex="0">
-								<img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence"/>
+								<img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence" title="Logo La Chouette Agence"/>
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span>
@@ -61,7 +61,7 @@
 			<!-- Header - Nav END -->
 
 			<!-- Banner -->
-			<section role="banner" class="bloc bgc-atomic-tangerine bg-repeat d-bloc bloc-bg-texture texture-paper" id="banner_contacts">
+			<section role="banner" class="bloc bg-dots-bg bgc-atomic-tangerine bg-repeat d-bloc bloc-bg-texture texture-paper" id="banner_contacts">
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
@@ -116,7 +116,7 @@
 						<h2><span>Contacts</span></h2>
 						<address>
 							<p><span>Adresse email</span><br/>
-							contact@lachouetteagence.com</p>
+							contact@<wbr>lachouetteagence<wbr>.com</p>
 							<p><span>Adresse</span><br/>
 							La Chouette Agence<br/>
 							2 place Sathonay<br/>
