Modif details accessibilite

--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -51,7 +51,7 @@
 									<a aria-label="Retour page accueil" class="tab_focus1" href="../index.html">Accueil</a>
 								</li>
 								<li>
-									<a aria-label="La Chouette Agence - Contacts" class="tab_focus1" href="contacts.html">Contact</a>
+									<a aria-label="La Chouette Agence - Contacts" class="tab_focus1" href="contacts.html">Contacts</a>
 								</li>
 							</ul>
 						</div>
