Creation page accessibilité + accesskey

--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet - Accueil">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<meta name="theme-color" content="#000">
 		<meta name="robots" content="index, follow">
-		<meta property="og:url" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO" />
+		<meta property="og:url" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="La Chouette Agence - Web Design à Lyon" />
-		<meta property="og:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet" />
+		<meta property="og:description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet" />
 		<meta property="og:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
 		<meta name="twitter:card" content="website" />
 		<meta name="twitter:site" content="@lachouetteagence" />
 		<meta name="twitter:creator" content="@lachouetteagence" />
 		<meta name="twitter:title" content="La Chouette Agence - Web Design à Lyon" />
-		<meta name="twitter:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet" />
+		<meta name="twitter:description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet" />
 		<meta name="twitter:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
-		<link rel="canonical" href="index.html">
+		<link rel="canonical" href="https://lulubaroy.github.io/La_Chouette_Agence_SEO/">
 		<link rel="manifest" href="manifest.webmanifest.json">
 		<link rel="apple-touch-icon" href="assets/img/favicon.jpg">
 		<link rel="shortcut icon" type="image/png" href="assets/img/favicon.jpg">
@@ -26,6 +25,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/et-line.css">
 		<title>La Chouette Agence - Web Design à Lyon</title>
+		<meta name="description" content="La chouette agence est une entreprise de web design basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet">
 	</head>
 	<body>
 		<!-- Principal container -->
@@ -35,7 +35,7 @@
 				<div class="bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand logo_header" aria-label="Retour page d'accueil" href="index.html" tabindex="0">
+							<a class="navbar-brand logo_header" aria-label="Retour page d'accueil" href="index.html" tabindex="0" accesskey="h">
 								<img src="assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence - Accueil" title="Logo La Chouette Agence" aria-label="Accueil"/>
 							</a>
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -48,10 +48,13 @@
 						<div class="collapse navbar-1 navbar-collapse">
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a href="index.html" aria-label="Retour page d'accueil" class="tab_focus1">Accueil</a>
+									<a href="index.html" aria-label="Retour page d'accueil" class="tab_focus1" accesskey="h">Accueil</a>
 								</li>
 								<li>
-									<a href="html-pages/contacts.html" aria-label="Accès page Contact La Chouette Agence" class="tab_focus1">Contacts</a>
+									<a href="html-pages/contacts.html" aria-label="Accès page Contact La Chouette Agence" class="tab_focus1" accesskey="c">Contacts</a>
+								</li>
+								<li>
+									<a href="html-pages/accessibility.html" aria-label="Accès page Accessibilité La Chouette Agence" class="tab_focus1" accesskey="a">Accessibilité</a>
 								</li>
 							</ul>
 						</div>
@@ -64,7 +67,7 @@
 					<div class="bloc-lg row">
 						<div class="col-sm-12 text-center" id="title_banner">
 							<img src="assets/img/logo.png" class="center-block" alt="Logo La chouette agence" title="Logo Principal la Chouette Agence" id="logo_banner"/>
-							<h1>
+							<h1 title="La Chouette Agence">
 								<span>La chouette agence.</span>
 							</h1>
 						</div>
@@ -209,14 +212,14 @@
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12">
-							<a href="html-pages/contacts.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero tab_focus2" aria-label="Accès page Contact La Chouette Agence">Contact</a>
+							<a href="html-pages/contacts.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero tab_focus2" aria-label="Accès page Contact La Chouette Agence" accesskey="c">Contacts</a>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- Contacts END -->
 			<!-- ScrollToTop Button -->
-			<a href="#" aria-label="Haut de la page" tabindex="0" class="btn btn-d scrollToTop chevron" onclick="scrollToTarget('1')">
+			<a href="#" aria-label="Haut de la page" aria-roledescription="Retour Haut de page" tabindex="0" class="btn btn-d scrollToTop chevron" onclick="scrollToTarget('1')">
 				<span class="fa fa-chevron-up"></span>
 			</a>
 			<!-- ScrollToTop Button END-->
@@ -229,16 +232,16 @@
 					<div class="row row-no-gutters social">
 						<ul id="network">
 							<li class="text-center col-sm-3">
-								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Twitter !"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Twitter !" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 							</li>
 							<li class="col-sm-3 text-center">
-								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Facebook !"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Facebook !" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 							</li>
 							<li class="col-sm-3 text-center">
-								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Dribbble !"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Dribbble !" title="Dribble"><span class="fa fa-dribbble icon-md"></span></a>
 							</li>
 							<li class="col-sm-3 text-center">
-								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Instagram !"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Instagram !" title="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 							</li>
 						</ul>
 					</div>
