--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -2,30 +2,30 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet - Contacts">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<meta name="theme-color" content="#000">
 		<meta name="robots" content="index, follow">
 		<meta property="og:url" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO" />
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="La Chouette Agence - Web Design à Lyon" />
-		<meta property="og:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet" />
+		<meta property="og:title" content="Contacts - La Chouette Agence - Web Design à Lyon" />
+		<meta property="og:description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, nous sommes une entreprise de Web Design basée à Lyon !" />
 		<meta property="og:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
 		<meta name="twitter:card" content="website" />
 		<meta name="twitter:site" content="@lachouetteagence" />
 		<meta name="twitter:creator" content="@lachouetteagence" />
-		<meta name="twitter:title" content="La Chouette Agence - Web Design à Lyon" />
-		<meta name="twitter:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet" />
+		<meta name="twitter:title" content="Contacts - La Chouette Agence - Web Design à Lyon" />
+		<meta name="twitter:description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, nous sommes une entreprise de Web Design basée à Lyon !" />
 		<meta name="twitter:image" content="https://lulubaroy.github.io/La_Chouette_Agence_SEO/assets/img/logo.png" />
 		<link rel="manifest" href="../manifest.webmanifest.json">
-		<link rel="canonical" href="../index.html">
+		<link rel="canonical" href="https://lulubaroy.github.io/La_Chouette_Agence_SEO/html-pages/contacts.html">
 		<link rel="apple-touch-icon" href="../assets/img/favicon.jpg">
 		<link rel="shortcut icon" type="image/png" href="../assets/img/favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="../assets/css/et-line.css">
-		<title>La Chouette Agence - Web Design à Lyon - Contact</title>
+		<title>Contacts - La Chouette Agence - Web Design à Lyon</title>
+		<meta name="description" content="Contacts - Un projet ? Des questions ? Un devis ? N'hésitez pas à contacter la Chouette Agence, nous sommes une entreprise de Web Design basée à Lyon !">
 	</head>
 	<body>
 		<!-- Principal container -->
@@ -35,7 +35,7 @@
 				<div class="bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand logo_header" aria-label="Retour page accueil" href="../index.html" tabindex="0">
+							<a class="navbar-brand logo_header" accesskey="h" aria-label="Retour page accueil" href="../index.html" tabindex="0">
 								<img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence" title="Logo La Chouette Agence"/>
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -48,10 +48,13 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a aria-label="Retour page accueil" class="tab_focus1" href="../index.html">Accueil</a>
+									<a aria-label="Retour page accueil" class="tab_focus1" href="../index.html" accesskey="h">Accueil</a>
 								</li>
 								<li>
-									<a aria-label="La Chouette Agence - Contacts" class="tab_focus1" href="contacts.html">Contacts</a>
+									<a aria-label="Contacts - La Chouette Agence" class="tab_focus1" href="contacts.html" accesskey="c">Contacts</a>
+								</li>
+								<li>
+									<a href="accessibility.html" aria-label="Accès page Accessibilité La Chouette Agence" class="tab_focus1" accesskey="a">Accessibilité</a>
 								</li>
 							</ul>
 						</div>
