--- a/html-pages/contacts.html
+++ b/html-pages/contacts.html
@@ -35,7 +35,7 @@
 				<div class="bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand logo_header" accesskey="h" aria-label="Retour page accueil" href="../index.html" tabindex="0">
+							<a class="navbar-brand logo_header" aria-label="Retour page accueil" href="../index.html" tabindex="0">
 								<img src="../assets/img/la-chouette-agence.png" alt="Logo La Chouette Agence" title="Logo La Chouette Agence"/>
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -146,16 +146,16 @@
 							</h3>
 							<ul class="row row-no-gutters social">
 								<li class="text-center col-sm-3">
-									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Twitter !"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Twitter !" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</li>
 								<li class="text-center col-sm-3">
-									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Facebook !"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Facebook !" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</li>
 								<li class="text-center col-sm-3">
-									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Dribbble" title="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 								</li>
 								<li class="text-center col-sm-3">
-									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Instagram !"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="../index.html" aria-label="Retrouvez-nous sur Instagram !" title="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</li>
 							</ul>
 						</div>
