--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Facebook !" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 							</li>
 							<li class="col-sm-3 text-center">
-								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Dribbble !" title="Dribble"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Dribbble !" title="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 							</li>
 							<li class="col-sm-3 text-center">
 								<a class="social" href="index.html" aria-label="Retrouvez-nous sur Instagram !" title="Instagram"><span class="fa fa-instagram icon-md"></span></a>
