--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12">
-							<a href="html-pages/contacts.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero tab_focus2" aria-label="Accès page Contact La Chouette Agence" accesskey="c">Contacts</a>
+							<a href="html-pages/contacts.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero tab_focus2" aria-label="Accès page Contact La Chouette Agence">Contacts</a>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- Contacts END -->
 			<!-- ScrollToTop Button -->
-			<a href="#" aria-label="Haut de la page" aria-roledescription="Retour Haut de page" tabindex="0" class="btn btn-d scrollToTop chevron" onclick="scrollToTarget('1')">
+			<a href="#" aria-label="Haut de la page" tabindex="0" class="btn btn-d scrollToTop chevron" onclick="scrollToTarget('1')">
 				<span class="fa fa-chevron-up"></span>
 			</a>
 			<!-- ScrollToTop Button END-->
